# UIC-CS251

CS251Lab2/: CMakeLists.txt  main.cpp
CS251Lab4/: CMakeLists.txt  main.cpp
CS251Lab6/: CMakeLists.txt  main.cpp
CS251Lab7/: CMakeLists.txt  main.cpp  util.h
CS251Prog1/: myinput.txt  myrandom.h  textGenerator.cpp
CS251Prog1/Project1.rep/: project.prp  projectState
CS251Prog1/Project1.rep/idata/: ~journal.bak
CS251Prog1/Test2.rep/: projectState
CS251Prog1/Test2.rep/idata/: ~index.bak
CS251Prog1/Tester.rep/: projectState
CS251Prog1/Tester.rep/idata/: ~index.bak
CS251Prog1/Tester.rep/user/: ~journal.bak
CS251Proj1P2/: CMakeLists.txt  CS251Proj1P2  makefile  myrandom.h
CS251Proj2/: CMakeCache.txt
CS251Proj2/cmake-3.27.0-rc4/Bootstrap.cmk/: InitialCacheFlags.cmake  cmVersionConfig.h
CS251Proj2/cmake-3.27.0-rc4/Source/: CMakeVersion.cmake
CS251Proj3/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
CS251Proj3(2)/: CMakeLists.txt
CS251Proj4/: CMakeCache.txt  CMakeLists.txt  util.h
CS251Proj4(2)/: CMakeCache.txt  CMakeLists.txt  hashmap.cpp  main.cpp
CS251Proj4(Final)/: CMakeLists.txt  hashmap.cpp  main.cpp  util.h
CS251Proj5/: dist.h  main.cpp  osm.cpp
Graphs and Path Finder/: dist.cpp  graph.h  makefile  osm.h  valgrindTestIn.txt
Graphs and Path Finder/graphTest/: testing.cpp
Hashing and Huffman Encoding/: bitstream.h
Markov Chain Text Generator/: main.cpp
Query Autocompleter/: AutocompleteList.h  CMakeLists.txt  CS251Proj2  main.cpp  makefile
Query Autocompleter/cmake-3.27.0-rc4/Bootstrap.cmk/: cmConfigure.h
Query Autocompleter/cmake-3.27.0-rc4/Bootstrap.cmk/cmsys/: Configure.hxx
Threaded BST Generator/: main.cpp
(+14 files in other folders)
